--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,22 @@
     background-color: darkgray;
     border-radius: 15px;
 }
+
+.simple-pulse {
+    animation: pulse 1.5s ease-in-out infinite;
+}
+@keyframes pulse {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.4;
+    }
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
