--- a/src/styles/Keyboard.css
+++ b/src/styles/Keyboard.css
@@ -6,6 +6,10 @@
     padding: 0.5rem;
 }
 
+.keyboard:focus {
+    outline: none;
+}
+
 .keyboard-row {
     display: flex;
     justify-content: center;
@@ -17,11 +21,13 @@
     min-width: 40px;
 }
 
+.keyboard button.pressed,
 .keyboard button:not(:disabled):hover {
     transform: scale(1.04);
-    filter: drop-shadow(0 0 0.3em rgb(117, 255, 255));
+    filter: drop-shadow(0 0 0.5em rgb(117, 255, 255));
 }
 
+.keyboard button.pressed,
 .keyboard button:not(:disabled):active {
-    transform: scale(0.97);
+    transform: scale(0.93);
 }
