- Use memo for keyboard & LetterSquares components
- Replace constant file with config file for  central config values

- Fix UI issue where key pressed with mouse would leave lightblue shadow

- App.jsx code consolidation

--- a/src/styles/LetterSquares.css
+++ b/src/styles/LetterSquares.css
@@ -14,8 +14,12 @@
     border-color: green;
     font-weight: bold;
 }
-.letter-square.error {
+.letter-square.failure {
     border-color: red;
+}
+
+.letter-square.error {
+    border-color: rgb(255, 153, 0);
 }
 
 .squares {
